--- a/jenkinsfile
+++ b/jenkinsfile
@@ -56,10 +56,11 @@ pipeline {
         agent any
         steps {
             // sh "docker login -u ${HARBOR_CREDS_USR} -p ${HARBOR_CREDS_PSW} ${params.HARBOR_HOST}"
-            sh "docker build -t mid/$APPNAME:$TAGS /opt/app/power-job/"
-            sh "docker tag mid/$APPNAME:$TAGS 172.20.1.89/mid/$APPNAME:$TAGS"
-            sh "docker push 172.20.1.89/mid/$APPNAME:$TAGS"
-            sh "docker rmi mid/$APPNAME:$TAGS"
+            sh "docker build -t prod/mid/$APPNAME:$TAGS /opt/app/power-job/"
+            sh "docker tag prod/mid/$APPNAME:$TAGS 172.20.1.89/prod/mid/$APPNAME:$TAGS"
+            sh "docker push 172.20.1.89/prod/mid/$APPNAME:$TAGS"
+            sh "docker rmi prod/mid/$APPNAME:$TAGS"
+            sh "docker rmi 172.20.1.89/prod/mid/$APPNAME:$TAGS"
         }
 
     }
